--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   },
   "dependencies": {
     "framer-motion": "^11.15.0",
+    "i18next": "^24.2.2",
+    "i18next-http-backend": "^3.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.4.0",
     "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
