--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.1",
+    "@types/react": "^18.3.18",
+    "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
@@ -31,6 +31,7 @@
     "globals": "^15.12.0",
     "postcss": "^8.5.1",
     "tailwindcss": "^3.4.17",
+    "typescript": "^5.7.3",
     "vite": "^6.0.1"
   }
 }
