--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "convex": "^1.19.2",
     "framer-motion": "^11.15.0",
     "i18next": "^24.2.2",
     "i18next-http-backend": "^3.0.2",
+    "jsmediatags": "^3.9.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-i18next": "^15.4.0",
+    "react-icons": "^5.4.0",
     "use-local-storage": "^3.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@types/jsmediatags": "^3.9.6",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
